# trtplus

./: .clang-format  .gitignore  CMakeLists.txt  README.md  imagenet_lable.txt  main.cpp  version.h.in
configs/: config.yaml
demo/: yolo.h  yolov10_det.cpp  yolov8_det.cpp  yolov8_seg.cpp
examples/: segmentation.cpp  yolo.h  yolov10_det.cpp  yolov11_det.cpp  yolov8_cls.cpp  yolov8_det.cpp  yolov8_obb.cpp  yolov8_seg.cpp
export/: export_dynamic_engine.sh  export_static_engine.sh
onnx2engine/: export_dynamic_engine.sh  export_static_engine.sh
src/: config.cpp  config.h  io.h  memory.cpp  memory.h  model.cpp  model.h  postprocess.cpp  postprocess.h  precision.cpp  precision.h  prepprocess.cpp  prepprocess.h  result.hpp  utils.cpp  utils.h
src/cpu/: postprocess.cpp  postprocess.h  prepprocess.cpp  prepprocess.h  preprocess.cpp  preprocess.h
src/gpu/: postprocess.cpp  postprocess.h  prepprocess.cpp  prepprocess.h  preprocess.cpp  preprocess.h
test/: mem.cpp  precision.h  test_chw2hwc.cpp  test_memory.cpp  test_model.cpp
